Revise homepage title and SEO metadata
Updated the homepage title, SEO metadata, and content for better clarity and relevance.

Signed-off-by: ramzan0043 <ramzaan0043@gmail.com>

--- a/home.html
+++ b/home.html
@@ -3,55 +3,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- Google Verification -->
-<meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
-<!-- MAIN TITLE -->
-<title>Free Instagram Hashtags Generator India | Trending Reels Tags, Viral Posts Hashtags | R7 Hub • Hashtag Ramzan Tool</title>
+  <!-- MAIN TITLE -->
+  <title>Home • R7 Hub | Free Hashtag Generator for Instagram Reels, Posts & Shorts India</title>
 
-<!-- MAIN SEO -->
-<meta name="description" content="Free hashtag generator by R7 Hub (Ramzan Ahmad) – trending hashtags for Instagram Reels, posts, YouTube Shorts & TikTok. Best tool for Indian creators. No ads, no login.">
-<meta name="keywords" content="free hashtag generator, instagram hashtags, trending hashtags, reels hashtags, india hashtags, R7 Hub, Ramzan Ahmad, hashtag tool">
+  <!-- MAIN SEO -->
+  <meta name="description" content="Welcome to R7 Hub • Hashtag Ramzan. Use our free hashtag generator to find trending Indian hashtags for Instagram reels, posts, stories, YouTube Shorts and TikTok. Simple, fast and made for Indian creators who want more reach and views.">
+  <meta name="keywords" content="home, R7 Hub, hashtag ramzan, free hashtag generator, instagram reels tags, india hashtags, creator growth tool" />
+  <meta name="author" content="Ramzan Ahmad" />
 
-<meta name="author" content="Ramzan Ahmad" />
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Home • R7 Hub | Free Hashtag Generator India" />
+  <meta property="og:description" content="Start using the free R7 Hub hashtag generator for Instagram reels and posts. Designed for Indian creators." />
+  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/home.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
 
-<!-- OPEN GRAPH (Social Media Preview) -->
-<meta property="og:title" content="Free Hashtag Generator – R7 Hub">
-<meta property="og:description" content="Instantly copy trending hashtags for Instagram & Reels. Free, fast, clean tool made by Ramzan Ahmad.">
-<meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg">
-<meta property="og:url" content="https://hashtagss.netlify.app/">
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="TheR7 Hub" />
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Home • R7 Hub | Free Hashtag Generator India" />
+  <meta name="twitter:description" content="Free Instagram hashtags generator for Indian creators by Hashtag Ramzan." />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
 
-<!-- TWITTER CARD -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Free Hashtag Generator – R7 Hub">
-<meta name="twitter:description" content="Trending Instagram & Reels hashtags for Indian creators.">
-<meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg">
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/home.html" />
 
-<!-- CANONICAL URL -->
-<link rel="canonical" href="https://hashtagss.netlify.app/" />
-
-<!-- Tailwind -->
-<script src="https://cdn.tailwindcss.com"></script>
-
-<script>
-  tailwind.config = {
-    theme: {
-      extend: {
-        colors: {
-          ramzan: "#22c55e",
-          r7dark: "#020617",
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
+          },
         },
       },
-    },
-  };
-</script>
-
-
+    };
+  </script>
 </head>
+
   <body class="bg-r7dark text-slate-100">
    
     <!-- NAVBAR (COMMON) -->
@@ -282,6 +279,7 @@
 
   </body>
 </html>
+
 
 
 
