--- a/about.html
+++ b/about.html
@@ -1,26 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>About R7 Hub • Hashtag Ramzan | Best Free Hashtag Generator for Instagram India
-</title>
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+
+  <!-- MAIN TITLE -->
+  <title>About R7 Hub • Hashtag Ramzan | Free Instagram Hashtag Generator for Indian Creators</title>
+
+  <!-- MAIN SEO -->
+  <meta name="description" content="Know the story behind R7 Hub • Hashtag Ramzan, a free Instagram hashtag generator created by Ramzan Ahmad for Indian students, creators and influencers who want to grow with the right reels and posts hashtags. Learn why this tool was built and how it helps creators every day.">
+  <meta name="keywords" content="about R7 Hub, about Hashtag Ramzan, Ramzan Ahmad, instagram hashtag generator story, indian creator tools" />
+  <meta name="author" content="Ramzan Ahmad" />
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="About R7 Hub • Hashtag Ramzan | Free Hashtag Generator Story" />
+  <meta property="og:description" content="Read about R7 Hub • Hashtag Ramzan and how this free hashtag generator helps Indian creators grow on Instagram." />
+  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/about.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="About R7 Hub • Hashtag Ramzan" />
+  <meta name="twitter:description" content="Story of R7 Hub and Hashtag Ramzan, a free Instagram hashtag generator from India." />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/about.html" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
   <body class="bg-r7dark text-slate-100">
     <!-- NAVBAR (COMMON) -->
     <header
@@ -408,4 +435,5 @@
     </script>
   </body>
 </html>
+
 
