--- a/blog.html
+++ b/blog.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>R7 Hub Blog | Trending Instagram Reels Hashtags, Creator Tips & Viral Growth Tricks
-</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+
+  <!-- MAIN TITLE -->
+  <title>R7 Hub Blog | Trending Instagram Reels Hashtags, Viral Growth Tips & Creator Guides</title>
+
+  <!-- MAIN SEO -->
+  <meta name="description" content="Read the R7 Hub • Hashtag Ramzan blog for daily trending Instagram reels hashtags, viral content ideas, creator growth tips, caption ideas and hashtag strategies for Indian creators. Learn how to get more reach, views and followers with smart hashtag use.">
+  <meta name="keywords" content="instagram reels blog, hashtag tips, creator growth, viral reels india, R7 Hub blog, hashtag ramzan blog" />
+  <meta name="author" content="Ramzan Ahmad" />
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="R7 Hub Blog | Trending Reels Hashtags & Creator Growth Tips" />
+  <meta property="og:description" content="Trending Instagram hashtags, reels ideas and growth guides for Indian creators on the R7 Hub blog." />
+  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/blog.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="R7 Hub Blog | Hashtags & Creator Tips" />
+  <meta name="twitter:description" content="Blog for trending Indian reels hashtags and creator tips by Hashtag Ramzan." />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/blog.html" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
   <body class="bg-r7dark text-slate-100">
    
     <!-- NAVBAR (COMMON) -->
@@ -263,4 +291,5 @@
 
   </body>
 </html>
+
 
