--- a/faq.html
+++ b/faq.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>FAQ • R7 Hub | Instagram Hashtag Generator Questions & Answers
-</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+
+  <!-- MAIN TITLE -->
+  <title>FAQ • R7 Hub | Instagram Hashtag Generator Questions & Answers</title>
+
+  <!-- MAIN SEO -->
+  <meta name="description" content="Frequently asked questions about the R7 Hub • Hashtag Ramzan free Instagram hashtag generator. Learn how to use the tool, how hashtags are generated, how often tags update and how to get better reach on reels and posts as an Indian creator.">
+  <meta name="keywords" content="faq, hashtag generator help, instagram hashtags questions, reels faq, R7 Hub faq, hashtag ramzan support" />
+  <meta name="author" content="Ramzan Ahmad" />
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="FAQ • R7 Hub | Hashtag Generator Help" />
+  <meta property="og:description" content="Questions and answers about the free R7 Hub Instagram hashtag generator for Indian creators." />
+  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/faq.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="FAQ • R7 Hub | Hashtag Generator Help" />
+  <meta name="twitter:description" content="FAQ page for R7 Hub • Hashtag Ramzan hashtag generator." />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/faq.html" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
   <body class="bg-r7dark text-slate-100">
     
     <!-- NAVBAR (COMMON) -->
@@ -202,4 +230,5 @@
 
   </body>
 </html>
+
 
