--- a/privacy.html
+++ b/privacy.html
@@ -1,24 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Privacy Policy • R7 Hub – Hashtag & Blog</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+
+  <!-- MAIN TITLE -->
+  <title>Privacy Policy • R7 Hub | Hashtag Ramzan – Free Instagram Hashtag Generator</title>
+
+  <!-- MAIN SEO -->
+  <meta name="description" content="Read the Privacy Policy of R7 Hub • Hashtag Ramzan and understand how your data is handled when you use our free Instagram hashtag generator for reels, posts and shorts. We respect your privacy and keep the experience simple, safe and ad-free.">
+  <meta name="keywords" content="privacy policy, R7 Hub privacy, hashtag ramzan privacy, data policy, instagram hashtag tool privacy" />
+  <meta name="author" content="Ramzan Ahmad" />
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Privacy Policy • R7 Hub | Hashtag Ramzan" />
+  <meta property="og:description" content="Privacy policy for the free Instagram hashtag generator by R7 Hub • Hashtag Ramzan." />
+  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/privacy.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Privacy Policy • R7 Hub | Hashtag Ramzan" />
+  <meta name="twitter:description" content="Privacy information for users of the R7 Hub free hashtag generator." />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/privacy.html" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
   <body class="bg-r7dark text-slate-100">
    
 
@@ -221,3 +250,4 @@
 
   </body>
 </html>
+
