Enhance SEO and add Google verification
Added SEO metadata and Google verification to terms.html

Signed-off-by: ramzan0043 <ramzaan0043@gmail.com>

--- a/terms.html
+++ b/terms.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Terms & Conditions • R7 Hub | Free Instagram Hashtag Generator India
-</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+
+  <!-- MAIN TITLE -->
+  <title>Terms & Conditions • R7 Hub | Free Instagram Hashtag Generator India</title>
+
+  <!-- MAIN SEO -->
+  <meta name="description" content="Read the Terms and Conditions for using R7 Hub • Hashtag Ramzan, a free Instagram hashtag generator for reels, posts, shorts and stories. Learn about acceptable use, limitations and legal information for Indian creators using this tool.">
+  <meta name="keywords" content="terms and conditions, R7 Hub terms, hashtag ramzan terms, legal information, instagram hashtag tool terms" />
+  <meta name="author" content="Ramzan Ahmad" />
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Terms & Conditions • R7 Hub | Hashtag Ramzan" />
+  <meta property="og:description" content="Terms and conditions for using the R7 Hub free Instagram hashtag generator." />
+  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/terms.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Terms & Conditions • R7 Hub | Hashtag Ramzan" />
+  <meta name="twitter:description" content="Terms for users of the R7 Hub • Hashtag Ramzan hashtag generator tool." />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/terms.html" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
   <body class="bg-r7dark text-slate-100">
    
 
@@ -216,4 +244,5 @@
 
   </body>
 </html>
+
 
