--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Disclaimer • R7 Hub | Hashtag Ramzan – Free Hashtag Generator
-</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+
+  <!-- MAIN TITLE -->
+  <title>Disclaimer • R7 Hub | Hashtag Ramzan – Free Hashtag Generator</title>
+
+  <!-- MAIN SEO -->
+  <meta name="description" content="Disclaimer for R7 Hub • Hashtag Ramzan, a free Instagram hashtag generator for Indian creators. Learn about content accuracy, responsibility and limitations of using this hashtag tool for reels and posts.">
+  <meta name="keywords" content="disclaimer, R7 Hub disclaimer, hashtag ramzan disclaimer, instagram hashtag tool disclaimer" />
+  <meta name="author" content="Ramzan Ahmad" />
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Disclaimer • R7 Hub | Hashtag Ramzan" />
+  <meta property="og:description" content="Official disclaimer for the R7 Hub free Instagram hashtag generator tool." />
+  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/disclaimer.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Disclaimer • R7 Hub | Hashtag Ramzan" />
+  <meta name="twitter:description" content="Disclaimer page for the R7 Hub • Hashtag Ramzan hashtag generator." />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/disclaimer.html" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
   <body class="bg-r7dark text-slate-100">
    
 
@@ -205,4 +233,5 @@
 
   </body>
 </html>
+
 
