--- a/about.html
+++ b/about.html
@@ -1,52 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Verification -->
-  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+    <!-- Google Verification -->
+    <meta
+      name="google-site-verification"
+      content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH"
+    />
 
-  <!-- MAIN TITLE -->
-  <title>About R7 Hub • Hashtag Ramzan | Free Instagram Hashtag Generator for Indian Creators</title>
+    <!-- MAIN TITLE -->
+    <title>
+      About R7 Hub • Hashtag Ramzan | Free Instagram Hashtag Generator for Indian
+      Creators
+    </title>
 
-  <!-- MAIN SEO -->
-  <meta name="description" content="Know the story behind R7 Hub • Hashtag Ramzan, a free Instagram hashtag generator created by Ramzan Ahmad for Indian students, creators and influencers who want to grow with the right reels and posts hashtags. Learn why this tool was built and how it helps creators every day.">
-  <meta name="keywords" content="about R7 Hub, about Hashtag Ramzan, Ramzan Ahmad, instagram hashtag generator story, indian creator tools" />
-  <meta name="author" content="Ramzan Ahmad" />
+    <!-- MAIN SEO -->
+    <meta
+      name="description"
+      content="Know the story behind R7 Hub • Hashtag Ramzan, a free Instagram hashtag generator created by Ramzan Ahmad for Indian students, creators and influencers who want to grow with the right reels and posts hashtags. Learn why this tool was built and how it helps creators every day."
+    />
+    <meta
+      name="keywords"
+      content="about R7 Hub, about Hashtag Ramzan, Ramzan Ahmad, instagram hashtag generator story, indian creator tools"
+    />
+    <meta name="author" content="Ramzan Ahmad" />
 
-  <!-- OPEN GRAPH -->
-  <meta property="og:title" content="About R7 Hub • Hashtag Ramzan | Free Hashtag Generator Story" />
-  <meta property="og:description" content="Read about R7 Hub • Hashtag Ramzan and how this free hashtag generator helps Indian creators grow on Instagram." />
-  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
-  <meta property="og:url" content="https://hashtagss.netlify.app/about.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+    <!-- OPEN GRAPH -->
+    <meta
+      property="og:title"
+      content="About R7 Hub • Hashtag Ramzan | Free Hashtag Generator Story"
+    />
+    <meta
+      property="og:description"
+      content="Read about R7 Hub • Hashtag Ramzan and how this free hashtag generator helps Indian creators grow on Instagram."
+    />
+    <meta
+      property="og:image"
+      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
+    />
+    <meta
+      property="og:url"
+      content="https://hashtagss.netlify.app/about.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
 
-  <!-- TWITTER CARD -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="About R7 Hub • Hashtag Ramzan" />
-  <meta name="twitter:description" content="Story of R7 Hub and Hashtag Ramzan, a free Instagram hashtag generator from India." />
-  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="About R7 Hub • Hashtag Ramzan"
+    />
+    <meta
+      name="twitter:description"
+      content="Story of R7 Hub and Hashtag Ramzan, a free Instagram hashtag generator from India."
+    />
+    <meta
+      name="twitter:image"
+      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
+    />
 
-  <!-- CANONICAL URL -->
-  <link rel="canonical" href="https://hashtagss.netlify.app/about.html" />
+    <!-- CANONICAL URL -->
+    <link rel="canonical" href="https://hashtagss.netlify.app/about.html" />
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            ramzan: "#22c55e",
-            r7dark: "#020617",
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              ramzan: "#22c55e",
+              r7dark: "#020617",
+            },
           },
         },
-      },
-    };
-  </script>
-</head>
+      };
+    </script>
+  </head>
 
   <body class="bg-r7dark text-slate-100">
     <!-- NAVBAR (COMMON) -->
@@ -56,44 +89,45 @@
       <div
         class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4"
       >
-      
-          <!-- Left: Logo + text -->
-<a href="https://instagram.com/ramzan0043" target="_blank" 
-   class="flex items-center gap-3">
+        <!-- Left: Logo + text -->
+        <a
+          href="https://instagram.com/ramzan0043"
+          target="_blank"
+          class="flex items-center gap-3"
+        >
+          <div
+            class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold"
+          >
+            R7
+          </div>
 
-  <div class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold">
-    R7
-  </div>
-
-  <div>
-    <p class="text-sm font-semibold tracking-tight">Hashtags</p>
-  </div>
-
-</a>
-
+          <div>
+            <p class="text-sm font-semibold tracking-tight">Hashtags</p>
+          </div>
+        </a>
 
         <!-- Desktop nav -->
         <nav class="hidden md:flex items-center gap-4 text-[13px]">
           <a href="index.html" class="hover:text-ramzan transition">Home</a>
           <a href="blog.html" class="hover:text-ramzan transition">Blog</a>
-          <a href="index.html#all" class="hover:text-ramzan transition"
-            >Hashtag Box</a
-          >
+          <a href="index.html#all" class="hover:text-ramzan transition">
+            Hashtags
+          </a>
           <a href="about.html" class="hover:text-ramzan transition">About</a>
-          <a href="contact.html" class="hover:text-ramzan transition"
-            >Contact</a
-          >
+          <a href="contact.html" class="hover:text-ramzan transition">
+            Contact
+          </a>
           <a href="faq.html" class="hover:text-ramzan transition">FAQ</a>
-          <a href="privacy.html" class="hover:text-ramzan transition"
-            >Privacy</a
-          >
+          <a href="privacy.html" class="hover:text-ramzan transition">
+            Privacy
+          </a>
           <a href="terms.html" class="hover:text-ramzan transition">Terms</a>
-          <a href="disclaimer.html" class="hover:text-ramzan transition"
-            >Disclaimer</a
-          >
-          <a href="sitemap.html" class="hover:text-ramzan transition"
-            >Sitemap</a
-          >
+          <a href="disclaimer.html" class="hover:text-ramzan transition">
+            Disclaimer
+          </a>
+          <a href="sitemap.html" class="hover:text-ramzan transition">
+            Sitemap
+          </a>
         </nav>
 
         <!-- Mobile menu button -->
@@ -127,17 +161,23 @@
         <div class="flex flex-col gap-2">
           <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
           <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
-          <a href="index.html#all" class="py-1 text-slate-200">#️⃣ Hashtag Box</a>
+          <a href="index.html#all" class="py-1 text-slate-200">
+            #️⃣ Hashtags
+          </a>
           <a href="about.html" class="py-1 text-slate-200">👤 About</a>
           <a href="contact.html" class="py-1 text-slate-200">📩 Contact</a>
 
           <div class="h-px bg-slate-800 my-1"></div>
           <a href="faq.html" class="py-1 text-slate-300">❓ FAQ</a>
-          <a href="privacy.html" class="py-1 text-slate-300">🛡 Privacy Policy</a>
-          <a href="terms.html" class="py-1 text-slate-300"
-            >📜 Terms &amp; Conditions</a
-          >
-          <a href="disclaimer.html" class="py-1 text-slate-300">⚠ Disclaimer</a>
+          <a href="privacy.html" class="py-1 text-slate-300">
+            🛡 Privacy Policy
+          </a>
+          <a href="terms.html" class="py-1 text-slate-300">
+            📜 Terms &amp; Conditions
+          </a>
+          <a href="disclaimer.html" class="py-1 text-slate-300">
+            ⚠ Disclaimer
+          </a>
           <a href="sitemap.html" class="py-1 text-slate-300">🗺 Sitemap</a>
         </div>
       </div>
@@ -151,14 +191,10 @@
         class="max-w-6xl mx-auto px-4 py-10 grid gap-8 md:grid-cols-[1.3fr,1.1fr]"
       >
         <div class="space-y-4">
-          <p
-            class="text-xs text-ramzan uppercase tracking-[0.3em]"
-          >
-            About
-          </p>
+          <p class="text-xs text-ramzan uppercase tracking-[0.3em]">About</p>
           <h1 class="text-3xl sm:text-4xl font-bold leading-tight">
             Main kaun hoon? Aur ye
-            <span class="text-ramzan">TheR7 Hub</span> kyun banaya?
+            <span class="text-ramzan">R7 Hub</span> kyun banaya?
           </h1>
           <p class="text-sm sm:text-base text-slate-300">
             Mera naam
@@ -170,41 +206,38 @@
         </div>
 
         <!-- PROFILE + FAST FACTS CARD -->
-       <div
-  class="rounded-3xl border border-slate-800 bg-slate-900/70 p-5 text-xs 
-         flex flex-row-reverse items-center gap-4"
->
-  <!-- Right: Profile image -->
-  <div class="flex-shrink-0 flex justify-center">
-    <img
-      src="ramzan ahmad.jpeg"
-      alt="Ramzan Ahmad – creator of TheR7 Hub"
-      class="w-28 h-28 sm:w-32 sm:h-32 rounded-2xl object-cover border-2 border-ramzan shadow-lg shadow-emerald-500/20"
-    />
-  </div>
+        <div
+          class="rounded-3xl border border-slate-800 bg-slate-900/70 p-5 text-xs flex flex-row-reverse items-center gap-4"
+        >
+          <!-- Right: Profile image -->
+          <div class="flex-shrink-0 flex justify-center">
+            <img
+              src="ramzan ahmad.jpeg"
+              alt="Ramzan Ahmad – creator of R7 Hub"
+              class="w-28 h-28 sm:w-32 sm:h-32 rounded-2xl object-cover border-2 border-ramzan shadow-lg shadow-emerald-500/20"
+            />
+          </div>
 
-  <!-- Left: Fast facts -->
-  <div class="space-y-3">
-    <p class="text-sm font-semibold">Fast facts</p>
-    <ul class="space-y-1 text-slate-300">
-      <li>• 👨‍🎓 BCA student + self-taught developer</li>
-      <li>• 💻 Interest: React Native, AI, full stack</li>
-      <li>• 🎯 Goal: skills se online earning</li>
-      <li>• 📍 India • Small town / village vibes</li>
-    </ul>
-    <p class="text-[11px] text-slate-500">
-      Jo cheeze main khud seekh raha hoon, wohi simple words me share karta
-      hoon – taaki students ko help mile.
-    </p>
-  </div>
+          <!-- Left: Fast facts -->
+          <div class="space-y-3">
+            <p class="text-sm font-semibold">Fast facts</p>
+            <ul class="space-y-1 text-slate-300">
+              <li>• 👨‍🎓 BCA student + self-taught developer</li>
+              <li>• 💻 Interest: React Native, AI, full stack</li>
+              <li>• 🎯 Goal: skills se online earning</li>
+              <li>• 📍 India • Small town / village vibes</li>
+            </ul>
+            <p class="text-[11px] text-slate-500">
+              Jo cheeze main khud seekh raha hoon, wohi simple words me share
+              karta hoon – taaki students ko help mile.
+            </p>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- MAIN CONTENT -->
-    <main
-      class="max-w-6xl mx-auto px-4 py-10 space-y-10 text-xs sm:text-sm"
-    >
+    <main class="max-w-6xl mx-auto px-4 py-10 space-y-10 text-xs sm:text-sm">
       <!-- Section: Story -->
       <section class="grid gap-6 md:grid-cols-2">
         <div
@@ -258,32 +291,38 @@
             class="rounded-xl bg-slate-950/60 border border-slate-800 p-4 space-y-1"
           >
             <p class="font-semibold text-sm">📚 R7 Blog</p>
-            <p>Code, mindset, social media, personal life learnings – sab mix.</p>
+            <p>
+              Code, mindset, social media, personal life learnings – sab mix.
+            </p>
             <a
               href="blog.html"
               class="text-ramzan text-[11px] hover:underline"
-              >Open blog →</a
             >
+              Open blog →
+            </a>
           </div>
           <div
             class="rounded-xl bg-slate-950/60 border border-slate-800 p-4 space-y-1"
           >
             <p class="font-semibold text-sm">#️⃣ Hashtag Box</p>
-            <p>Instagram, Facebook, YouTube ke liye ready-made hashtag sets.</p>
+            <p>
+              Instagram, Facebook, YouTube ke liye ready-made hashtag sets.
+            </p>
             <a
-              href="hashtags.html"
+              href="index.html#all"
               class="text-ramzan text-[11px] hover:underline"
-              >Open hashtag tool →</a
             >
+              Open hashtag tool →
+            </a>
           </div>
           <div
             class="rounded-xl bg-slate-950/60 border border-slate-800 p-4 space-y-1"
           >
             <p class="font-semibold text-sm">🚀 Future Plans</p>
             <p>Projects, free resources, maybe templates, Notion pages, etc.</p>
-            <span class="text-[11px] text-slate-500"
-              >Slowly-slowly add hoga.</span
-            >
+            <span class="text-[11px] text-slate-500">
+              Slowly-slowly add hoga.
+            </span>
           </div>
         </div>
       </section>
@@ -313,7 +352,9 @@
                 />
               </div>
               <div>
-                <label class="block mb-1 text-slate-300">Email (optional)</label>
+                <label class="block mb-1 text-slate-300">
+                  Email (optional)
+                </label>
                 <input
                   type="email"
                   class="w-full rounded-xl bg-slate-950/80 border border-slate-700 px-3 py-2 outline-none focus:border-ramzan"
@@ -363,9 +404,13 @@
               class="flex items-center justify-between rounded-xl bg-slate-950/70 border border-slate-800 px-3 py-2"
             >
               <span>YouTube</span>
-              <span class="text-slate-400 text-[11px]"
-                >youtube.com/@yourchannel</span
+              <a
+                href="https://youtube.com/@yourchannel"
+                target="_blank"
+                class="text-slate-400 text-[11px] hover:text-ramzan"
               >
+                youtube.com/@yourchannel
+              </a>
             </div>
             <div
               class="flex items-center justify-between rounded-xl bg-slate-950/70 border border-slate-800 px-3 py-2"
@@ -435,5 +480,3 @@
     </script>
   </body>
 </html>
-
-
